archive/CryptoDeployment.yml
#  \
#  \\,
#   \\\,^,.,,.                     Zero to Hero
#   ,;7~((\))`;;,,               <zerotohero.dev>
#   ,(@') ;)`))\;;',    stay up to date, be curious: learn
#    )  . ),((  ))\;,
#   /;`,,/7),)) )) )\,,
#  (& )`   (,((,((;( ))\,

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fizz
  name: crypto
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: crypto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crypto
    spec:
      containers:
      - name: crypto
        image: 340111760086.dkr.ecr.us-west-2.amazonaws.com/fizz-crypto:0.0.10
        ports:
        - containerPort: 9001
