archive/CryptoService.yml
#  \
#  \\,
#   \\\,^,.,,.                     Zero to Hero
#   ,;7~((\))`;;,,               <zerotohero.dev>
#   ,(@') ;)`))\;;',    stay up to date, be curious: learn
#    )  . ),((  ))\;,
#   /;`,,/7),)) )) )\,,
#  (& )`   (,((,((;( ))\,

apiVersion: v1
kind: Service
metadata:
  namespace: fizz
  name: crypto
  annotations:                                                                   
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-west-2:340111760086:certificate/453      30a0a-dbae-41a9-a111-13ed2220cf5b
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http          
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"   

#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-west-2:340111760086:certificate/45330a0a-dbae-41a9-a111-13ed2220cf5b
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  selector:
    app.kubernetes.io/name: crypto
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9001
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9001
  type: NodePort
